--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,6 +14,11 @@
       <div><%= message %></div>
     <% end %>
   </div>
+  <div class="field">
+    <%= form.label :author_id %>
+    <%= form.collection_select :author_id, Author.all, :id, :full_name, prompt: "Select author" %>
+  </div>
+
   <div>
   <%= form.label :status %><br>
   <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %>
