--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,30 +1,41 @@
-<%= form_with model: article do |form| %>
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+<%= form_with model: article, html: { style: "width: 500px;" } do |form| %>
+  <div class="mb-3">
+    <%= form.label :title, class: "form-label" do %>
+      <strong>Title:</strong>
+    <% end %><br>
+    <%= form.text_field :title, class: "form-control" %>
     <% article.errors.full_messages_for(:title).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %><br>
+  <div class="mb-3">
+    <%= form.label :body, class: "form-label" do %>
+      <strong>Body:</strong>
+    <% end %><br>
+    <%= form.text_area :body, class: "form-control" %><br>
     <% article.errors.full_messages_for(:body).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
-  <div class="field">
-    <%= form.label :author_id %>
-    <%= form.collection_select :author_id, Author.all, :id, :full_name, prompt: "Select author" %>
+
+  <div class="mb-3">
+    <%= form.label :author_id, class: "form-label" do %>
+      <strong>Author:</strong>
+    <% end %><br>
+    <%= form.collection_select :author_id, Author.all, :id, :full_name, { prompt: "Select author" }, { class: "form-select" } %>
   </div>
 
-  <div>
-  <%= form.label :status %><br>
-  <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %>
-</div>
+  <div class="mb-3">
+    <%= form.label :status, class: "form-label" do %>
+      <strong>Status:</strong>
+    <% end %><br>
+    <%= form.select :status, Visible::VALID_STATUSES, { selected: article.status || 'public' }, { class: "form-select" } %>
+  </div>
 
-  <div>
+  <div class="mt-3">
     <%= form.submit "Save", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+
