--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -1,35 +1,39 @@
-<%= form_with(model: author, local: true) do |form| %>
-  <% if author.errors.any? %>
+<div style="width: 500px;">
+  <%= form_with(model: author, local: true) do |form| %>
     <div id="error_explanation">
-      <h2><%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:</h2>
+      <% if author.errors.any? %>
+        <div class="alert alert-danger">
+          <h4><%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:</h4>
 
-      <ul>
-      <% author.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+            <% author.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :first_name, class: "form-label" %>
+      <%= form.text_field :first_name, class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :last_name, class: "form-label" %>
+      <%= form.text_field :last_name, class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :email, class: "form-label" %>
+      <%= form.email_field :email, class: "form-control" %>
+      <% if author.errors[:email].any? %>
+        <div class="error"> <%= author.errors[:email].first %> </div>
+      <% end %>
+    </div>
+
+    <div class="mt-3">
+      <%= form.submit "Save", class: "btn btn-primary" %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.email_field :email %>
-    <% if author.errors[:email].any? %>
-      <div class="error"> <%= author.errors[:email].first %> </div>
-    <% end %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
