--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,6 +13,7 @@
     <% else %>
       <p class="author ml-4">Author: Unknown</p>
     <% end %> 
+     <p> <%= @article.created_at.strftime("%B %d, %Y") %> </p>
     </div>
 
   </div>
