bootstrap styles for devise forms

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -24,7 +24,7 @@
     <%= form.label :body, class: "form-label" do %>
       <strong>Body:</strong>
     <% end %><br>
-    <%= form.text_area :body, class: "form-control" %><br>
+    <%= form.text_area :body, class: "form-control", placeholder: "Enter your article text here", rows: 6, style: "resize: none;" %><br>
   </div>
 
 
