--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <div class='d-flex justify-content-between mb-3'>
     <% if author_signed_in? %>
-      <%= link_to "Profile", edit_author_registration_path %>
+      <%= link_to "Profile", edit_author_registration_path, class: "btn btn-success" %>
       <%= button_to "Log Out", destroy_author_session_path, method: :delete, class: 'btn btn-primary'%>
     <% end %>
   </div>
