--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -33,7 +33,7 @@
     </div>
 
     <div class="mt-3">
-      <%= form.submit "Save", class: "btn btn-primary" %>
+      <%= form.submit "Save", class: "btn btn-success" %>
     </div>
   <% end %>
 </div>
