ReadMe file, extra test -author can have multiple article, logic for comments - authenticated author does not have to enter the name for the comment(it will be automatically displayed) added

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,10 @@
 <%= form_with model: [ @article, @article.comments.build ],html: { style: "width: 500px;" } do |form| %>
-  <div class="mb-3">
-    <%= form.label :commenter, class: "form-label" %>
-    <%= form.text_field :commenter, class: "form-control" %>
-  </div>
+  <% unless author_signed_in? %>
+    <div class="mb-3">
+      <%= form.label :commenter, class: "form-label" %>
+      <%= form.text_field :commenter, class: "form-control" %>
+    </div>
+  <% end %>
 
   <div class="mb-3">
     <%= form.label :body, class: "form-label" %>
